# comfyui-massmediafactory-mcp

./: .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEBASE_REVIEW.md  MIGRATION_PLAN.md  PHASE1_SUMMARY.md  README.md  kimik2.5_swarmaudit_monday940pm.md  phase6_verification_report.md  pyproject.toml
config/: style_config.json
docs/: AGENT_NATIVE_COMFYUI_REWRITE_PLAN_2026-02-11.md  BENCHMARK_REPORT.md  CLI_MCP_ARCHITECTURE_REVIEW_2026-02-11.md  CLI_PATTERNS.md  COMFYUI_AGENTIC_INTERFACE_STRATEGY_2026-02-11.md  COMFYUI_OFFICIAL_WORKFLOWS.md  COMPREHENSIVE_IMPROVEMENT_PLAN.md  DEEP_PLANNING_AGENTIC_COMFYUI_BLUEPRINT_2026-02-11.md  ERROR_RECOVERY.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_ROADMAP.md  LINEAR_TICKETS_MCP_CLI_MIGRATION.md  MCP_ADOPTION_PLAYBOOK.md  MCP_BIG_BANG_MIGRATION_PLAN.md  MCP_CLI_Migration_Assessment_2026-02-07.md  MCP_IMPROVEMENT_ANALYSIS.md  MIGRATION_VERIFICATION.md  PRODUCTION_OPTIMIZATION.md  QA_CHECKLIST.md  ROLLBACK_PROCEDURE.md  ROLLBACK_TEST_REPORT.md  TEMPLATE_MIGRATION_GUIDE.md  TOKEN_REDUCTION_PLAN.md  WORKFLOW_DRIFT_ANALYSIS.md  WORKFLOW_IMPROVEMENT_PLAN.md  WORKFLOW_NODE_REFERENCE.md  new-repo
scripts/: benchmark_mcp_comfyui.py  generate_benchmark_charts.py  linear_hook.py  precommit_template_hooks.py  sync_templates.py
templates/: cogvideox_5b_t2v.json  controlnet_canny.json  controlnet_depth.json  instantid_portrait.json  ip_adapter_style.json  z_turbo_txt2img.json
tests/: __init__.py  conftest.py  test_assets.py  test_batch.py  test_cli.py  test_client.py  test_execution.py  test_integration_logging.py  test_ltx_planner.py  test_model_registry.py  (+8 more)
(+135 files in other folders)
